--- a/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.scss
+++ b/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.scss
@@ -43,7 +43,7 @@ mat-card-title {
   cursor: pointer;
   margin-bottom: 20px;
   font-family: Georgia, "Times New Roman", Times, serif;
-  width: 530px;
+  width: 80%;
 }
 .saveButton:hover {
   background-color: #1ddd04;
