--- a/src/app/tela-login-cadastro/tela-login-cadastro.component.html
+++ b/src/app/tela-login-cadastro/tela-login-cadastro.component.html
@@ -19,10 +19,10 @@
             <mat-form-field class="example-full-width">
               <mat-label>Senha</mat-label>
               <input
-                formControlName="password"
+                formControlName="senha"
                 type="password"
                 matInput
-                placeholder="Password"
+                placeholder="senha"
               />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
@@ -60,30 +60,30 @@
             <mat-form-field class="example-full-width">
               <mat-label>Senha</mat-label>
               <input
-                formControlName="password"
+                formControlName="senha"
                 type="password"
                 matInput
-                placeholder="Password"
+                placeholder="senha"
               />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
             <mat-form-field class="example-full-width">
               <mat-label>Confirme a Senha</mat-label>
               <input
-                formControlName="confirmPassword"
+                formControlName="confirmarSenha"
                 type="password"
                 matInput
-                placeholder="Password"
+                placeholder="senha"
               />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
             <mat-form-field class="example-full-width">
               <mat-label>Matrícula</mat-label>
               <input
-                formControlName="matricula"
+                formControlName="registro"
                 type="text"
                 matInput
-                placeholder="Matrícula"
+                placeholder="Registro"
                 value=""
               />
               <mat-icon matSuffix>edit</mat-icon>
@@ -121,20 +121,20 @@
             <mat-form-field class="example-full-width">
               <mat-label>Senha</mat-label>
               <input
-                formControlName="password"
+                formControlName="senha"
                 type="password"
                 matInput
-                placeholder="Password"
+                placeholder="senha"
               />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
             <mat-form-field class="example-full-width">
               <mat-label>Confirme a Senha</mat-label>
               <input
-                formControlName="confirmPassword"
+                formControlName="confirmarSenha"
                 type="password"
                 matInput
-                placeholder="Password"
+                placeholder="senha"
               />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
