--- a/src/app/role-adm/tela-create-adm/tela-create-adm.component.html
+++ b/src/app/role-adm/tela-create-adm/tela-create-adm.component.html
@@ -1,31 +1,42 @@
 <h1>Adicione um ADM</h1>
 <div class="container">
   <div class="dadosPessoais">
-    <form [formGroup]="cadastroProfessorAdmForm" (ngSubmit)="register()">
-      <mat-form-field class="nome" appearance="fill">
+    <form [formGroup]="cadastroProfessorAdmForm" (ngSubmit)="cadastro()">
+      <mat-form-field appearance="fill">
         <mat-label>Nome do Administrador:</mat-label>
         <input formControlName="nome" matInput />
         <mat-icon matSuffix>account_circle</mat-icon>
       </mat-form-field>
 
-      <mat-form-field class="nome" appearance="fill">
+      <mat-form-field appearance="fill">
         <mat-label>Email:</mat-label>
         <input formControlName="email" matInput />
         <mat-icon matSuffix>email</mat-icon>
       </mat-form-field>
 
-      <mat-form-field class="nome" appearance="fill">
+      <mat-form-field appearance="fill">
         <mat-label>Senha:</mat-label>
-        <input type="password" formControlName="password" matInput />
+        <input type="password" formControlName="senha" matInput />
         <mat-icon matSuffix>vpn_key</mat-icon>
       </mat-form-field>
 
-      <mat-form-field class="nome" appearance="fill">
+      <mat-form-field appearance="fill">
         <mat-label>Confirme a senha:</mat-label>
-        <input type="password" formControlName="confirmPassword" matInput />
+        <input type="password" formControlName="confirmarSenha" matInput />
         <mat-icon matSuffix>vpn_key</mat-icon>
       </mat-form-field>
 
+      <mat-form-field>
+        <mat-label>Registro</mat-label>
+        <input
+          formControlName="registro"
+          type="text"
+          matInput
+          placeholder="Registro"
+          value=""
+        />
+        <mat-icon matSuffix>assignment_ind</mat-icon>
+      </mat-form-field>
       <div class="alterarEmail">
         <button
           mat-button
