--- a/src/app/tela-see-more/tela-see-more.component.html
+++ b/src/app/tela-see-more/tela-see-more.component.html
@@ -82,18 +82,25 @@
       <ng-container matColumnDef="registrationNumber">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>MATRÍCULA</th>
         <td class="registrationNumber" mat-cell *matCellDef="let row">
-          {{ row.registration_number }}
+          {{ row.registro }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>NOME</th>
-        <td class="nome" mat-cell *matCellDef="let row">{{ row.name }}</td>
+        <td class="nome" mat-cell *matCellDef="let row">{{ row.nome }}</td>
       </ng-container>
 
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>EMAIL</th>
         <td class="email" mat-cell *matCellDef="let row">{{ row.email }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="descricao">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
+        <td class="descricao" mat-cell *matCellDef="let row">
+          {{ row.descricao }}
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
