--- a/src/app/role-adm/tela-edit-course/tela-edit-course.component.scss
+++ b/src/app/role-adm/tela-edit-course/tela-edit-course.component.scss
@@ -4,6 +4,11 @@
   border-bottom: 2px solid black;
 }
 
+button:hover {
+  background: #1ddd04 !important;
+  color: black !important;
+}
+
 .container {
   margin: 0 auto;
   display: flex;
