sala de lista de alunos tela-solicitacoes-registro pronta

--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
@@ -80,16 +80,16 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="registrationNumber">
+      <ng-container matColumnDef="registro">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>MATRÍCULA</th>
-        <td class="registrationNumber" mat-cell *matCellDef="let row">
-          {{ row.registration_number }}
+        <td class="registro" mat-cell *matCellDef="let row">
+          {{ row.registro }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>NOME</th>
-        <td class="nome" mat-cell *matCellDef="let row">{{ row.name }}</td>
+        <td class="nome" mat-cell *matCellDef="let row">{{ row.nome }}</td>
       </ng-container>
 
       <ng-container matColumnDef="email">
