--- a/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
+++ b/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
@@ -24,97 +24,77 @@
 </mat-toolbar>
 
 <div class="table-container">
-  <mat-form-field>
-    <mat-label>Informe o Curso:</mat-label>
-    <mat-select
-      (valueChange)="changeCourse($event)"
-      formControlName="teachers_id"
-      multiple
-    >
-      @for (course of courseList; track course) {
-      <mat-option [value]="course.curso_id">{{ course.nome }}</mat-option>
-      } @empty {
-      <mat-option [value]="">Sem dados</mat-option>
-      }
-    </mat-select>
+  <mat-form-field [formGroup]="form">
+    <mat-label>Filtro por palavras chaves</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex: SOPA2"
+      #input
+    />
   </mat-form-field>
-  <div
-    *ngIf="selectionCourse.selected.length > 0 && dataSource.data.length > 0"
-  >
-    <mat-form-field>
-      <mat-label>Filtro por palavras chaves</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex: SOPA2"
-        #input
-      />
-    </mat-form-field>
 
-    <div class="mat-elevation-z4">
-      <table mat-table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="remove">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox
-              (change)="$event ? toggleAllRowsReject() : null"
-              [checked]="selectionReject.hasValue() && isAllRejectSelected()"
-              [indeterminate]="
-                selectionReject.hasValue() && !isAllRejectSelected()
-              "
-            >
-              Selecionar Excluir
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox
-              (click)="$event.stopPropagation()"
-              (change)="$event ? selectionReject.toggle(row) : null"
-              [checked]="selectionReject.isSelected(row)"
-            ></mat-checkbox>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="edit">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Selecionar Editar
-          </th>
-          <td class="select" mat-cell *matCellDef="let row">
-            <mat-checkbox
-              (click)="$event.stopPropagation()"
-              (change)="$event ? selection.toggle(row) : null"
-              [checked]="selection.isSelected(row)"
-              [disabled]="
-                selection.selected.length > 0
-                  ? !selection.isSelected(row)
-                  : false
-              "
-            ></mat-checkbox>
-          </td>
-        </ng-container>
+  <div class="mat-elevation-z4">
+    <table mat-table [dataSource]="courseList" matSort>
+      <ng-container matColumnDef="remove">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? toggleAllRowsReject() : null"
+            [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+            [indeterminate]="
+              selectionReject.hasValue() && !isAllRejectSelected()
+            "
+          >
+            Selecionar Excluir
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selectionReject.toggle(row) : null"
+            [checked]="selectionReject.isSelected(row)"
+          ></mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Selecionar Editar
+        </th>
+        <td class="select" mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+            [disabled]="
+              selection.selected.length > 0 ? !selection.isSelected(row) : false
+            "
+          ></mat-checkbox>
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-        </ng-container>
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
-          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-        </ng-container>
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+        <td mat-cell *matCellDef="let row">{{ row.nome }}</td>
+      </ng-container>
+      <ng-container matColumnDef="descricao">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
+        <td mat-cell *matCellDef="let row">{{ row.descricao }}</td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">
-            Não foram encontrados dados para: "{{ input.value }}"
-          </td>
-        </tr>
-      </table>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          Não foram encontrados dados para: "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
 
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
-    </div>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
   </div>
 </div>
 
