--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -25,7 +25,7 @@
     </button>
     <button (click)="redirectMaterias()" mat-menu-item>
       <mat-icon>library_books</mat-icon>
-      <span>Materias</span>
+      <span>Disciplinas</span>
     </button>
   </mat-menu>
 
