--- a/src/app/tela-disciplinas/tela-disciplinas.component.html
+++ b/src/app/tela-disciplinas/tela-disciplinas.component.html
@@ -2,11 +2,11 @@
   <div class="reservas-button">
     <h1>Escolha alguma das opções abaixo:</h1>
     <button mat-raised-button (click)="addData()" class="demo-button">
-      CRIAR NOVAS MATÉRIAS
+      CRIAR NOVAS DISCIPLINAS
     </button>
     <br />
     <button mat-raised-button (click)="seeData()" class="demo-button">
-      VER MATERIAS
+      VER DISCIPLINAS
     </button>
   </div>
 </div>
