tela-disciplinas ajustada e finalizada

--- a/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
+++ b/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
@@ -35,7 +35,7 @@
   </mat-form-field>
 
   <div class="mat-elevation-z4">
-    <table mat-table [dataSource]="disciplinasList" matSort>
+    <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef>
           <mat-checkbox
