--- a/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.scss
+++ b/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.scss
@@ -1,7 +1,3 @@
-.example-spacer {
-  flex: 1 1 auto;
-}
-
 .mat-toolbar {
   background: #000000;
   color: #1ddd04;
@@ -26,13 +22,12 @@
   width: 95%;
   margin: auto;
   margin-top: 1cm;
-  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 2px 5px black;
   overflow-x: auto;
 }
 
 table {
   background-color: #dcdee2;
-  width: 100%;
 }
 mat-paginator {
   background-color: #dcdee2;
@@ -45,7 +40,6 @@ mat-paginator {
 }
 
 .demo-button-container {
-  position: absolute;
   margin: 1% auto;
   margin-left: 3%;
 }
