--- a/src/app/role-adm/tela-edit-course/tela-edit-course.component.html
+++ b/src/app/role-adm/tela-edit-course/tela-edit-course.component.html
@@ -22,7 +22,7 @@
           mat-raised-button
           color="secondary"
         >
-          Cadastrar
+          Editar
         </button>
       </div>
     </form>
