--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -23,7 +23,7 @@
       <mat-icon>room</mat-icon>
       <span>Salas</span>
     </button>
-    <button (click)="redirectMaterias()" mat-menu-item>
+    <button (click)="redirectDisciplinas()" mat-menu-item>
       <mat-icon>library_books</mat-icon>
       <span>Disciplinas</span>
     </button>
