telas das turmas modificadas

--- a/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
+++ b/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
@@ -105,7 +105,7 @@
     (click)="editDisciplinas()"
     class="demo-button"
   >
-    EDITAR MATÉRIA
+    EDITAR
   </button>
   <button
     mat-raised-button
@@ -113,6 +113,6 @@
     (click)="apagarDisciplinas()"
     class="demo-button"
   >
-    EXCLUIR MATÉRIA
+    EXCLUIR
   </button>
 </div>
