--- a/src/app/tela-disciplinas/tela-novas-disciplinas/tela-novas-disciplinas.component.html
+++ b/src/app/tela-disciplinas/tela-novas-disciplinas/tela-novas-disciplinas.component.html
@@ -29,7 +29,7 @@
     Disciplinas</mat-card-title
   >
   <mat-card-content>
-    <form [formGroup]="ProfessorAdmForm" (ngSubmit)="save()">
+    <form [formGroup]="disciplinaForm" (ngSubmit)="save()">
       <mat-form-field>
         <mat-label>Nome:</mat-label>
         <input
