--- a/src/app/tela-turmas/tela-novas-turmas/tela-novas-turmas.component.html
+++ b/src/app/tela-turmas/tela-novas-turmas/tela-novas-turmas.component.html
@@ -1,1 +1,76 @@
-<p>tela-novas-turmas works!</p>
+<mat-toolbar>
+  <button mat-icon-button (click)="goHome()">
+    <mat-icon>home</mat-icon>
+  </button>
+
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="redirectProfile()" mat-menu-item>
+      <mat-icon>account_circle</mat-icon>
+      <span>Perfil</span>
+    </button>
+  </mat-menu>
+
+  <span class="tituloH">HEIMDALL</span>
+
+  <span class="spacer"></span>
+
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
+  <img src="assets/images/ifsp.logo.png" class="logo" />
+</mat-toolbar>
+
+<mat-card>
+  <mat-card-title
+    >{{ turmaToEdit.valid ? "Edição" : "Cadastro" }} de Turmas</mat-card-title
+  >
+  <mat-card-content>
+    <form [formGroup]="turmaForm" (ngSubmit)="save()">
+      <mat-form-field>
+        <mat-label>Professor:</mat-label>
+        <input
+          formControlName="professor_id"
+          matInput
+          type="text"
+          placeholder="Professor da turma"
+        />
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <mat-label>Disciplina:</mat-label>
+        <input
+          formControlName="disciplina_id"
+          matInput
+          type="text"
+          placeholder="Disciplina da turma"
+        />
+      </mat-form-field>
+      <br /><mat-form-field>
+        <mat-label>Periodo:</mat-label>
+        <input
+          formControlName="periodo"
+          matInput
+          type="text"
+          placeholder="Periodo da turma"
+        />
+      </mat-form-field>
+      <br /><mat-form-field>
+        <mat-label>Aluno:</mat-label>
+        <input
+          formControlName="aluno_id"
+          matInput
+          type="text"
+          placeholder="Aluno da turma"
+        />
+      </mat-form-field>
+      <br />
+
+      <button type="submit" class="saveButton">
+        {{ turmaToEdit.valid ? "Editar" : "Cadastrar" }}
+      </button>
+    </form>
+  </mat-card-content>
+</mat-card>
